# fwk_voice

./: .cproject  .gitignore  .gitmodules  .project  CHANGELOG.rst  CMakeLists.txt  CODEOWNERS  Jenkinsfile  Makefile  README.md  README.rst  XCORE-AI-EXPLORER.xn  index.rst  requirements.txt  requirements_test.txt  settings.json  settings.yml  test_requirements.txt
applications/host/fatfs/: CMakeLists.txt  README.rst
examples/bare-metal/: CMakeLists.txt  index.rst
examples/bare-metal/aec/: CMakeLists.txt  run_xcoreai.py
examples/bare-metal/aec_1_thread/: CMakeLists.txt  README.rst  run_xcoreai.py
examples/bare-metal/aec_2_threads/: CMakeLists.txt  README.rst
examples/bare-metal/agc/: CMakeLists.txt  README.rst  config.xscope
examples/bare-metal/doc/: aec_1_thread.rst  aec_2_threads.rst  agc.rst  ic.rst  index.rst  pipeline_alt_arch.rst  pipeline_multi_threaded.rst  pipeline_single_threaded.rst  vad.rst  vnr.rst
examples/bare-metal/ic/: CMakeLists.txt  README.rst  doit.sh  plot_compare.py  run_xcoreai.py
examples/bare-metal/pipeline_1_thread/: CMakeLists.txt
examples/bare-metal/pipeline_alt_arch/: CMakeLists.txt  README.rst  compare_vad_vnr.py
examples/bare-metal/pipeline_multi_threaded/: CMakeLists.txt  README.rst
examples/bare-metal/pipeline_single_threaded/: CMakeLists.txt  README.rst
examples/bare-metal/shared_src/: CMakeLists.txt  wav_utils.h
examples/bare-metal/sup/: CMakeLists.txt
examples/bare-metal/test_mel/: CMakeLists.txt  test_mel.py
examples/bare-metal/test_wav_vnr/: CMakeLists.txt  readme  test_wav_vnr.py
examples/bare-metal/vad/: CMakeLists.txt  Makefile  README.rst  config.xscope  wscript
examples/bare-metal/vnr/: CMakeLists.txt  README.rst  host_app.py  profile.py  readme  test_wav_vnr.py
examples/bare-metal/vnr_test/: CMakeLists.txt
host/control/: CMakeLists.txt  avona_control.c  commands.c
modules/: CMakeLists.txt
modules/adaptive_filter/: CMakeLists.txt
modules/adaptive_filter/api/: fdaf_api.h  fdaf_defines.h  fdaf_state.h
modules/adaptive_filter/src/: fdaf_filter.c  fdaf_l2_filter.c
modules/lib_adec/: CMakeLists.txt  lib_adec.cmake
modules/lib_adec/api/: adec_api.h  adec_defines.h  adec_state.h
modules/lib_adec/doc/: index.rst
modules/lib_adec/src/: adec_impl.c  adec_priv.h  adec_priv_impl.c  de_impl.c
modules/lib_aec/: CMakeLists.txt  README.rst  lib_aec.cmake  settings.json
modules/lib_aec/api/: adec_api.h  adec_defines.h  adec_state.h  adec_types.h  aec_api.h  aec_defines.h  aec_delay_estimator_control.h  aec_state.h
modules/lib_aec/doc/: .gitignore  Diagrams.ipynb  Doxyfile  Makefile  README.rst  conf.py  index.rst  requirements.txt
modules/lib_aec/src/: adec_impl.c  aec_delay_estimator.c  aec_impl.c  aec_l2_impl.c  aec_priv.h  aec_priv_impl.c  delay_estimator_controller.c
modules/lib_agc/: CMakeLists.txt
modules/lib_agc/api/: agc_api.h  agc_init.h  agc_profiles.h
modules/lib_agc/doc/: index.rst
modules/lib_agc/src/: agc_defines.h  agc_impl.c
modules/lib_de/: CMakeLists.txt  lib_de.cmake
modules/lib_de/api/: de_api.h  de_defines.h  de_state.h
modules/lib_de/src/: de_impl.c
modules/lib_fdaf/: CMakeLists.txt
modules/lib_fdaf/api/: fdaf_api.h
modules/lib_fdaf/src/: fdaf_control.c  fdaf_filter.c  fdaf_l2_filter.c
modules/lib_ic/: CMakeLists.txt  lib_ic.cmake
modules/lib_ic/api/: ic_api.h  ic_defines.h  ic_state.h
modules/lib_ic/doc/: Doxyfile.inc  Makefile  README.rst  conf.py  index.rst
modules/lib_ic/src/: ic.c  ic_low_level.c  ic_low_level.h
modules/lib_ic/test/: test_adaption_controller.c  test_ic_h_hat_leakage.c
modules/lib_melspectrogram/: CMakeLists.txt
modules/lib_melspectrogram/api/: mel_spec_settings.h  melspectrogram_api.h
modules/lib_melspectrogram/src/: melspectrogram_impl.c
modules/lib_meta_data/: CMakeLists.txt  meta_data.cmake
modules/lib_meta_data/api/: meta_gen.h
modules/lib_meta_data/doc/: Doxyfile
modules/lib_meta_data/src/: meta_gen.c
modules/lib_noise_suppression/: CMakeLists.txt  lib_noise_suppression.cmake
modules/lib_noise_suppression/api/: sup_api.h  sup_state.h  suppression.h  suppression_conf.h  suppression_ns.h  suppression_state.h  suppression_testing.h
modules/lib_noise_suppression/doc/: index.rst
modules/lib_noise_suppression/src/: noise_suppression.c  sup_impl.c  sup_noise.c  sup_ns.h  sup_test.h  suppression.c  suppression_conf.h  suppression_ns.h  suppression_state.h  suppression_testing.h  suppression_window.c  suppression_window.h
modules/lib_ns/: CMakeLists.txt
modules/lib_ns/api/: ns_api.h  ns_state.h
modules/lib_ns/doc/: index.rst
modules/lib_ns/src/: ns_impl.c  ns_low_level.c  ns_priv.h  ns_priv_impl.c  ns_test.h
modules/lib_vad/: CMakeLists.txt  lib_vad.cmake
modules/lib_vad/api/: vad.h  vad_api.h  vad_mel.h
modules/lib_vad/doc/: index.rst
modules/lib_vad/src/: dsp_complex.h  vad.c  vad.xc  vad_dct.c  vad_dct.h  vad_helpers.c  (+19 more)
modules/lib_vnr/: CMakeLists.txt
modules/meta_data/: CMakeLists.txt
test/: CMakeLists.txt  README.rst  build_test_configs.sh  helpers.sh  test_wakeword_detection.py  test_wakeword_detection.sh  test_ww_detection.py
test/etc/: build_options.cmake
test/lib_adec/: CMakeLists.txt
test/lib_aec/: CMakeLists.txt  wav_test_functions.py
test/lib_agc/: CMakeLists.txt
test/lib_de/: CMakeLists.txt
test/lib_ic/: CMakeLists.txt
test/lib_melspectrogram/: CMakeLists.txt  requirements.txt  requirements_melspectrogram.txt
test/lib_meta_data/: CMakeLists.txt  conftest.py  pytest.ini
test/lib_noise_suppression/: CMakeLists.txt
test/lib_ns/: CMakeLists.txt
test/lib_vad/: CMakeLists.txt
test/lib_vnr/: CMakeLists.txt
test/meta_data_tests/: CMakeLists.txt
test/pipeline/: CMakeLists.txt  compare_keywords.py  conftest.py  load_npy.py  pipeline_test_utils.py  plot_results.py  run_amazon_wwe.py  run_sensory.py  test_pipeline.py
test/shared/: CMakeLists.txt
test/stage_b/: build_c_code.py  build_frame_test.py  extract_state.py  ic_vad_test.c  ic_vnr_test.c  test_stage_b_frame.py
test/test_hpf/: CMakeLists.txt  conftest.py  generate_unity_runner.py  pytest.ini
(+826 files in other folders)
